[gd_scene load_steps=4 format=3 uid="uid://dlrusowk5dye3"]

[ext_resource type="Texture2D" uid="uid://b44xj235f8bxh" path="res://Texture/Personaje.png" id="1_a103j"]
[ext_resource type="Script" path="res://scritps/selector_de_color.gd" id="1_nw4r6"]
[ext_resource type="Material" uid="uid://dcioys3yovb74" path="res://selector_de_color.tres" id="2_7lmhc"]

[node name="Selector de color" type="Node2D"]
script = ExtResource("1_nw4r6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1161.0
offset_bottom = 653.0
color = Color(0.571107, 0.802834, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 451.0
offset_top = 228.0
offset_right = 639.0
offset_bottom = 416.0
color = Color(0.523781, 0.523781, 0.523781, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 467.0
offset_top = 242.0
offset_right = 625.0
offset_bottom = 400.0
color = Color(0.786347, 0.786347, 0.786347, 1)

[node name="Personaje" type="Sprite2D" parent="."]
material = ExtResource("2_7lmhc")
position = Vector2(543, 327)
scale = Vector2(4.27743, 4.27743)
texture = ExtResource("1_a103j")

[node name="Label" type="RichTextLabel" parent="."]
offset_left = 693.0
offset_top = 231.0
offset_right = 733.0
offset_bottom = 306.0
scale = Vector2(2.49977, 2.49977)
bbcode_enabled = true
text = "[color=red]R[/color]
[color=green]G[/color]
[color=blue]B[/color]"

[node name="R" type="BoxContainer" parent="."]
offset_left = 743.0
offset_top = 243.0
offset_right = 825.0
offset_bottom = 283.0

[node name="-" type="Button" parent="R"]
layout_mode = 2
text = "  -  "

[node name="+" type="Button" parent="R"]
layout_mode = 2
text = "  +  "

[node name="value" type="Label" parent="R"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "0"

[node name="G" type="BoxContainer" parent="."]
offset_left = 743.0
offset_top = 310.0
offset_right = 825.0
offset_bottom = 350.0

[node name="-" type="Button" parent="G"]
layout_mode = 2
text = "  -  "

[node name="+" type="Button" parent="G"]
layout_mode = 2
text = "  +  "

[node name="value" type="Label" parent="G"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "0"

[node name="B" type="BoxContainer" parent="."]
offset_left = 743.0
offset_top = 374.0
offset_right = 825.0
offset_bottom = 414.0

[node name="-" type="Button" parent="B"]
layout_mode = 2
text = "  -  "

[node name="+" type="Button" parent="B"]
layout_mode = 2
text = "  +  "

[node name="value" type="Label" parent="B"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "0"

[node name="prendas" type="VBoxContainer" parent="."]
offset_left = 306.0
offset_top = 247.0
offset_right = 384.0
offset_bottom = 348.0
scale = Vector2(1.49358, 1.49358)

[node name="cabello" type="Button" parent="prendas"]
layout_mode = 2
text = "Cabello"

[node name="camisa" type="Button" parent="prendas"]
layout_mode = 2
text = "Camisa"

[node name="pantalon" type="Button" parent="prendas"]
layout_mode = 2
text = "Pantalon"

[node name="continuar" type="Button" parent="."]
offset_left = 422.0
offset_top = 445.0
offset_right = 508.0
offset_bottom = 476.0
scale = Vector2(2.91867, 2.91867)
text = "Continuar"

[node name="texto" type="Label" parent="."]
offset_left = 298.0
offset_top = 141.0
offset_right = 545.0
offset_bottom = 164.0
scale = Vector2(2.13172, 2.13172)
text = "Selecciona el Color de Tu Avatar"

[connection signal="pressed" from="R/-" to="." method="_on_bajar_r_button_down"]
[connection signal="pressed" from="R/+" to="." method="_on_subir_r_button_down"]
[connection signal="pressed" from="G/-" to="." method="_on_bajar_g_button_down"]
[connection signal="pressed" from="G/+" to="." method="_on_subir_g_button_down"]
[connection signal="pressed" from="B/-" to="." method="_on_bajar_b_button_down"]
[connection signal="pressed" from="B/+" to="." method="_on_subir_b_button_down"]
[connection signal="pressed" from="prendas/cabello" to="." method="_on_cabello_pressed"]
[connection signal="pressed" from="prendas/camisa" to="." method="_on_camisa_pressed"]
[connection signal="pressed" from="prendas/pantalon" to="." method="_on_pantalon_pressed"]
[connection signal="pressed" from="continuar" to="." method="_on_continuar_pressed"]
